--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node .",
+    "start": "node --env-file=.env .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
