--- a/.github/workflows/auto-deploy.yaml
+++ b/.github/workflows/auto-deploy.yaml
@@ -20,7 +20,7 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
           # Verify GitHub connection (optional)
-          ssh -T git@github.com
+          # ssh -T git@github.com
       - name: connect and pull
         run: |
           ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
