--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
   rest-api:
     build: .
     environment:
-      - DB_PATH="./../data/database.sqlite"
+      - DB_PATH=/data/database.sqlite
     volumes:
       - /root/data:/app/dist/models/data/
     stdin_open: true
