--- a/.github/workflows/auto-deploy.yaml
+++ b/.github/workflows/auto-deploy.yaml
@@ -40,6 +40,6 @@ jobs:
              git checkout ${{ secrets.MAIN_BRANCH }} && \
              git pull && \
              docker compose down && \
-             docker compose up -d"
+             docker compose up -d --build"
       - name: cleanup
         run: rm -rf ~/.ssh
