--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node .",
+    "watch": "tsc -w",
+    "dev": "nodemon --env-file=.env .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "typescript": "^5.8.3"
   },
   "dependencies": {
